@startuml

title __PAINTPATTERNS's Class Diagram__\n

  namespace com.kamshanski.blepositioning {
    namespace view {
      namespace paintpatterns {
        class com.kamshanski.blepositioning.view.paintpatterns.PaintCircle {
            # borderColor : Color
            + PaintCircle()
            + paint()
            + setCircle()
            + setPositionAndSize()
        }
      }
    }
  }
  

  namespace com.kamshanski.blepositioning {
    namespace view {
      namespace paintpatterns {
        class com.kamshanski.blepositioning.view.paintpatterns.PaintLine {
            + PaintLine()
            + paint()
        }
      }
    }
  }
  

  namespace com.kamshanski.blepositioning {
    namespace view {
      namespace paintpatterns {
        abstract class com.kamshanski.blepositioning.view.paintpatterns.PaintObject {
            + DX : double
            + DY : double
            + X : double
            + Y : double
            # color : Color
            # dx : double
            # dy : double
            # x : double
            # y : double
            + PaintObject()
            + getDX()
            + getDY()
            + getX()
            + getY()
            {abstract} + paint()
            + setPositionAndSize()
            # throwError()
        }
      }
    }
  }
  

  namespace com.kamshanski.blepositioning {
    namespace view {
      namespace paintpatterns {
        class com.kamshanski.blepositioning.view.paintpatterns.PaintRectangle {
            ~ borderColor : Color
            + PaintRectangle()
            + paint()
        }
      }
    }
  }
  

  namespace com.kamshanski.blepositioning {
    namespace view {
      namespace paintpatterns {
        class com.kamshanski.blepositioning.view.paintpatterns.PaintString {
            - str : String
            + PaintString()
            + paint()
            + setText()
        }
      }
    }
  }
  

  com.kamshanski.blepositioning.view.paintpatterns.PaintCircle -up-|> com.kamshanski.blepositioning.view.paintpatterns.PaintObject
  com.kamshanski.blepositioning.view.paintpatterns.PaintLine -up-|> com.kamshanski.blepositioning.view.paintpatterns.PaintObject
  com.kamshanski.blepositioning.view.paintpatterns.PaintRectangle -up-|> com.kamshanski.blepositioning.view.paintpatterns.PaintObject
  com.kamshanski.blepositioning.view.paintpatterns.PaintString -up-|> com.kamshanski.blepositioning.view.paintpatterns.PaintObject


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
